# Chip-8-Emulator

./: CMakeLists.txt  Chip8.cpp  Main.cpp  README.md
Source/: Chip8.cpp  Chip8.h  platform.cpp  platform.h
